--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,8 @@ dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
 	compile 'mysql:mysql-connector-java'
 	compile("org.springframework.boot:spring-boot-devtools")
+	compile("org.springframework.boot:spring-boot-starter-security")
+	compile 'com.google.apis:google-api-services-oauth2:v1-rev141-1.23.0'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 
 
