--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/alkohunters
 spring.datasource.username=app
 spring.datasource.password=alkopromo
 logging.level.org.hibernate.SQL=debug
+
+spring.jackson.time-zone=UTC
+spring.jpa.properties.hibernate.jdbc.time_zone = UTC
